--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,10 @@ select:invalid{
       <button style="height:80px;font-size:16px;">
         ⚙️ Outras Ferramentas
       </button>
+<button style="height:80px;font-size:16px;"
+        onclick="abrirMapa('mapas/mapa_empreiteiras.jpg')">
+  🗺️ Mapa Atendimento Empreiteiras
+</button>
 
     </div>
 
@@ -2423,5 +2427,6 @@ function fecharMapa(e){
 
 </body>
 </html>
+
 
 
