--- a/index.html
+++ b/index.html
@@ -1000,10 +1000,21 @@ select:invalid{
 
   <button style="height:80px;font-size:16px;"
         onclick="openModule('mapas_regionais', this)">
-  🗺️ Mapas da Regional
-</button>
-        
-<button style="height:80px;font-size:16px;"
+🗺️ Mapas da Regional</button>
+
+      <button style="height:80px;font-size:16px;">
+        📘 Manual de Religador
+      </button>
+
+      <button style="height:80px;font-size:16px;">
+        📑 Normas e Procedimentos
+      </button>
+
+      <button style="height:80px;font-size:16px;">
+        ⚙️ Outras Ferramentas
+      </button>
+
+      <button style="height:80px;font-size:16px;"
         onclick="abrirMapa('mapas/mapa_empreiteiras.jpg')">
   🗺️ Mapa Atendimento Empreiteiras
 </button>
@@ -2416,7 +2427,5 @@ function fecharMapa(e){
 
 </body>
 </html>
-
-
 
 
