--- a/index.html
+++ b/index.html
@@ -2054,26 +2054,20 @@ select:invalid{
 </div>
 
 
-    <!-- LINHA 6 – FINALIZAÇÃO -->
-    <div class="linha-4-rel">
-      <div>
-        <label>GLV extraído?</label>
-        <select id="tf_glv_extraido">
-          <option>SIM</option>
-          <option selected>NÃO</option>
-        </select>
-      </div>
+ <!-- LINHA 6 – FINALIZAÇÃO -->
+<div class="linha-2">
 
-      <div>
-        <label>Materiais Necessários:</label>
-        <textarea id="tf_materiais" style="height:60px"></textarea>
-      </div>
+  <div>
+    <label>Materiais Necessários:</label>
+    <textarea id="tf_materiais" style="height:60px"></textarea>
+  </div>
 
-      <div>
-        <label>Observações:</label>
-        <textarea id="tf_obs" style="height:60px"></textarea>
-      </div>
-    </div>
+  <div>
+    <label>Observações:</label>
+    <textarea id="tf_obs" style="height:60px"></textarea>
+  </div>
+
+</div>
 
     <!-- BOTÕES -->
     <div class="linha-3">
