--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@ select:invalid{
     <button onclick="openModule('ss',this)">🧾 Preenchimento de SS</button>
     <button onclick="openModule('sinergia',this)">⚙️ Script Mais Sinergia</button>
     <button onclick="openModule('desarme',this)">🚨 Script Desarme</button>
-    <button onclick="openModule('trafo',this)">🔁 Substituição de Trafo</button>
+    <button onclick="openModule('trafo',this)">🔁 Substituição de Trafo (incompleto) </button>
     <button onclick="openModule('substituicao_poste', this)">🛠️ Substituição de Poste</button>
 
 
@@ -2421,5 +2421,6 @@ function fecharMapa(e){
 
 </body>
 </html>
+
 
 
