--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,7 @@ select:invalid{
       <option>Telefone incorreto</option>
       <option>Cliente desligou</option>
       <option>Telefone não cadastrado</option>
+      <option>Cliente não atende o telefone </option>
       <option>Outros</option>
     </select>
   </div>
@@ -2421,6 +2422,7 @@ function fecharMapa(e){
 
 </body>
 </html>
+
 
 
 
