--- a/index.html
+++ b/index.html
@@ -1163,22 +1163,21 @@ select:invalid{
   </div>
 
   <div>
-    <label>Self-healing?</label>
-    <select id="selfhealing">
-      <option>Sim</option>
-      <option>Não</option>
-    </select>
+  <select id="selfhealing">
+  <option value="Não" selected>Não</option>
+  <option value="Sim">Sim</option>
+</select>
+      
   </div>
 </div>
 
 <!-- LINHA 4 -->
 <div class="linha-3">
   <div>
-    <label>Desativou Self-healing</label>
-    <select id="desativou">
-      <option>Sim</option>
-      <option>Não</option>
-    </select>
+  <select id="desativou">
+  <option value="Não" selected>Não</option>
+  <option value="Sim">Sim</option>
+</select>
   </div>
 
   <div>
@@ -2422,6 +2421,7 @@ function fecharMapa(e){
 
 </body>
 </html>
+
 
 
 
