--- a/index.html
+++ b/index.html
@@ -1163,21 +1163,22 @@ select:invalid{
   </div>
 
   <div>
-  <select id="selfhealing">
-  <option value="Não" selected>Não</option>
-  <option value="Sim">Sim</option>
-</select>
-      
+    <label>Self-healing?</label>
+    <select id="selfhealing">
+      <option>Sim</option>
+      <option>Não</option>
+    </select>
   </div>
 </div>
 
 <!-- LINHA 4 -->
 <div class="linha-3">
   <div>
-  <select id="desativou">
-  <option value="Não" selected>Não</option>
-  <option value="Sim">Sim</option>
-</select>
+    <label>Desativou Self-healing</label>
+    <select id="desativou">
+      <option>Sim</option>
+      <option>Não</option>
+    </select>
   </div>
 
   <div>
