--- a/index.html
+++ b/index.html
@@ -925,7 +925,10 @@ select:invalid{
   border:2px solid #c62828;
   background:#fff5f5;
 }
-
+}
+#bloq_equipe {
+  text-transform: uppercase;
+}
 </style>
 </head>
 
@@ -2422,6 +2425,7 @@ function fecharMapa(e){
 
 </body>
 </html>
+
 
 
 
